--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AnimatedSplash.MySplash"
         tools:targetApi="31">
-
         <activity
-            android:name=".IntroActivity"
-            android:exported="false" />
-
+            android:name=".SignUpActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/AppTheme.SignUpPage"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -34,9 +34,7 @@
 
         <activity
             android:name=".MainPageActivity"
-            android:theme="@style/AppTheme.MainPage">
-        </activity>
-
+            android:theme="@style/AppTheme.MainPage" />
     </application>
 
 </manifest>
