--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,10 +15,13 @@
         android:theme="@style/Theme.AnimatedSplash.MySplash"
         tools:targetApi="31">
         <activity
+            android:name=".UserActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignUpActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/AppTheme.SignUpPage"/>
+            android:theme="@style/AppTheme.SignUpPage"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -36,6 +40,9 @@
         <activity
             android:name=".MainPageActivity"
             android:theme="@style/AppTheme.MainPage" />
+        <activity
+            android:name=".BasketActivity"
+            android:theme="@style/AppTheme.BasketPage" />
     </application>
 
 </manifest>
