--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,11 @@
         android:theme="@style/Theme.AnimatedSplash.MySplash"
         tools:targetApi="31">
         <activity
+            android:name=".HeartActivity"
+            android:theme="@style/AppTheme.HeartPage" />
+        <activity
             android:name=".UserActivity"
-            android:exported="false" />
+            android:theme="@style/AppTheme.UserPage" />
         <activity
             android:name=".SignUpActivity"
             android:exported="false"
