--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.AnimatedSplash.MySplash"
         tools:targetApi="31">
         <activity
+            android:name=".AddCarActivity"
+            android:exported="false"
+            android:theme="@style/AppTheme.SignUpPage"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name=".HeartActivity"
             android:theme="@style/AppTheme.HeartPage" />
         <activity
