--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:theme="@style/Theme.AnimatedSplash.MySplash"
         tools:targetApi="31">
         <activity
+            android:name=".OfferActivity"
+            android:theme="@style/AppTheme.OfferPage"
+            android:exported="false" />
+        <activity
             android:name=".AddCarActivity"
             android:exported="false"
             android:theme="@style/AppTheme.SignUpPage"
